Details
-
Bug
-
Status: Resolved
-
Minor
-
Resolution: Fixed
-
None
Description
DCHECKs seem to be used where Status::Invalid might be considered more appropriate (so programs don't crash). See conversation on https://github.com/apache/arrow/pull/3287/files
based on conversation on this Jira and on the CL it seems DCHECKS are in fact desired but we should document appropriate use for them.
Attachments
Issue Links
- links to