ARROW-4264: [C++] Clarify use of DCHECKs in Kernels

Also make format caught some random changes.

@wesm @fsaintjacques I'm about 90% agreed this approach is reasonable but I'm not sure this is very important to work out now (it should be pretty quick to reverse this decision), but we should document so we can at least be consistent in implementing kernels.

Author: Micah Kornfield <emkornfield@gmail.com>
Author: Wes McKinney <wesm+git@apache.org>

Closes #3588 from emkornfield/clarify_dcheck and squashes the following commits:

0c9b9eda0 <Wes McKinney> clang-format
d08a67827 <Micah Kornfield> fix typos
d9ad78b50 <Micah Kornfield> ARROW-4264: Clarify use of DCHECKs in Kernels